@@ -1,3 +1,6 @@
+2019-01-07
+    * Support for IPv6 network backend (drumstick > 1.1.2)
+
 2018-12-03
     * Release 0.7.1
 
